--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         </ul>
 
         <h2 class="section-title">Idiomas</h2>
-        <p>Español y Guarani (Nativo), Inglés (Avanzado), Portugués (Intermedio)</p>
+        <p>Español(Nativo),Guarani (Nativo), Inglés (Avanzado), Portugués (Intermedio)</p>
 
         <h2 class="section-title">Proyectos Destacados</h2>
         <ul>
