--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         body {
             font-family: Arial, sans-serif;
             line-height: 1.6;
+            background-color: #f4f4f4; /* Color de fondo sutil */
         }
         .header {
             background-color: #343a40;
@@ -81,18 +82,18 @@
         </ul>
 
         <h2 class="section-title">Idiomas</h2>
-        <p>Español(Nativo),Guarani (Nativo), Inglés (Avanzado), Portugués (Intermedio)</p>
+        <p>Español (Nativo), Guaraní (Nativo), Inglés (Avanzado), Portugués (Intermedio)</p>
 
         <h2 class="section-title">Proyectos Destacados</h2>
         <ul>
             <li>
-                <a>Reconocimiento de chapas de vehículos en tiempo real</a>: Implementación de Yolov5 y ONNX para el Reconocimiento de Chapas de Vehículos.
+                <a href="https://luisaguero44.github.io/DeteccionDeChapas-/index.htm" target="_blank">Reconocimiento de chapas de vehículos en tiempo real</a>: Implementación de Yolov5 y ONNX para el Reconocimiento de Chapas de Vehículos.
             </li>
             <li>
                 <a>Tutorías personalizadas</a>: Desarrollo de un método interactivo de enseñanza que combina teoría y ejercicios prácticos para estudiantes de matemáticas y física.
             </li>
             <li>
-                <a>Reconocimiento de Lenguaje de señas</a>: Implementación de un sistema usando MediaPipe para identificar el lenguaje de señas.
+                <a href="https://luisaguero44.github.io/Senhales/index.html" target="_blank">Reconocimiento de Lenguaje de señas</a>: Implementación de un sistema usando MediaPipe para identificar el lenguaje de señas.
             </li>
         </ul>
 
