--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         <h2 class="section-title"> Proyectos Destacados</h2>
         <ul>
             <li>
-                <a href="https://luisaguero44.github.io/DeteccionDeChapas-/index.htm" target="_blank">Reconocimiento de chapas de vehículos en tiempo real</a>: Implementación de Yolov5 y ONNX para el Reconocimiento de Chapas de Vehículos.
+                <a href="https://luisaguero44.github.io/DeteccionDeChapas-/index.html" target="_blank">Reconocimiento de chapas de vehículos en tiempo real</a>: Implementación de Yolov5 y ONNX para el Reconocimiento de Chapas de Vehículos.
             </li>
             <li>
                 <a>Tutorías personalizadas</a>: Desarrollo de un método interactivo de enseñanza que combina teoría y ejercicios prácticos para estudiantes de matemáticas y física.
